wurst: bessere platzhalter-meldung

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -56,9 +56,9 @@
                 </div>
                 Platz 1
                 <br />&nbsp;
-                <div id="court1status">Bewässerung gesperrt</div>
+                <div id="court1status">STATUS_TEXT</div>
                 <br />&nbsp;
-                ---
+                1 Minute wässern
                 <br />&nbsp;
               </div>
             </td>
@@ -69,7 +69,7 @@
                 </div>
                 Platz 2
                 <br />&nbsp;
-                <div id="court2status">Bewässerung inaktiv</div>
+                <div id="court2status">STATUS_TEXT</div>
                 <br />&nbsp;
                 1 Minute wässern
                 <br />&nbsp;
@@ -82,7 +82,7 @@
                 </div>
                 Platz 3
                 <br />&nbsp;
-                <div id="court3status">Sprinkler aktiv für 1:58</div>
+                <div id="court3status">STATUS_TEXT</div>
                 <br />&nbsp;
                 1 Minute wässern
                 <br />&nbsp;
@@ -102,8 +102,7 @@
                 </div>
                 Platz 4
                 <br />&nbsp;
-                <div id="court4status">Sprinkler soll 2:00</div>
-                <!-- <br />(#3 - Wartezeit: 1:58) -->
+                <div id="court4status">STATUS_TEXT</div>
                 <br />&nbsp;
                 1 Minute wässern
                 <br />&nbsp;
@@ -116,7 +115,7 @@
                 </div>
                 Platz 5
                 <br />&nbsp;
-                <div id="court5status">Sprinkler aktiv für 2:43</div>
+                <div id="court5status">STATUS_TEXT</div>
                 <br />&nbsp;
                 1 Minute wässern
                 <br />&nbsp;
@@ -129,7 +128,7 @@
                 </div>
                 Platz 6
                 <br />&nbsp;
-                <div id="court6status">Bewässerung inaktiv</div>
+                <div id="court6status">STATUS_TEXT</div>
                 <br />&nbsp;
                 1 Minute wässern
                 <br />&nbsp;
