wurst: remove button classes

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -50,7 +50,7 @@
 
           <tr>
             <td class="span4">
-              <div id="court1button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+              <div id="court1button" style="display: block; width: 80%;" type="button" class="btn btn-large">
                 <div id="court1xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
@@ -63,7 +63,7 @@
               </div>
             </td>
             <td class="span4">
-              <div id="court2button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+              <div id="court2button" style="display: block; width: 80%;" type="button" class="btn btn-large">
                 <div id="court2xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
@@ -76,7 +76,7 @@
               </div>
             </td>
             <td class="span4">
-              <div id="court3button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
+              <div id="court3button" style="display: block; width: 80%;" type="button" class="btn btn-large">
                 <div id="court3xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
@@ -109,7 +109,7 @@
               </div>
             </td>
             <td class="span4">
-              <div id="court5button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
+              <div id="court5button" style="display: block; width: 80%;" type="button" class="btn btn-large">
                 <div id="court5xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
@@ -122,7 +122,7 @@
               </div>
             </td>
             <td class="span4">
-              <div id="court6button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+              <div id="court6button" style="display: block; width: 80%;" type="button" class="btn btn-large">
                 <div id="court6xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
