wurst: status: show errors in-app without popup

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -308,15 +308,15 @@
       async: true,
       success: function(msg) {
         if (msg.status == "inactive") {
-          $("#" + "court" + id + "button").removeClass("btn-info").addClass("btn-success");
+          $("#" + "court" + id + "button").removeClass("btn-danger").removeClass("btn-info").addClass("btn-success");
           $("#" + "court" + id + "xbutton").addClass("hidden");
           document.getElementById("court" + id + "status").innerHTML = "Bewässerung inaktiv";
         } else if (msg.status == "active") {
-          $("#" + "court" + id + "button").removeClass("btn-success").addClass("btn-info");
+          $("#" + "court" + id + "button").removeClass("btn-danger").removeClass("btn-success").addClass("btn-info");
           $("#" + "court" + id + "xbutton").removeClass("hidden");
           document.getElementById("court" + id + "status").innerHTML = "aktiv für " + Math.round(msg.remaining_time);
         } else if (msg.status == "waiting") {
-          $("#" + "court" + id + "button").removeClass("btn-success").removeClass("btn-info");
+          $("#" + "court" + id + "button").removeClass("btn-danger").removeClass("btn-success").removeClass("btn-info");
           $("#" + "court" + id + "xbutton").removeClass("hidden");
           document.getElementById("court" + id + "status").innerHTML = "Sprinkler soll " + Math.round(msg.duration);
         } else {
@@ -324,7 +324,10 @@
         }
       },
       error: function(msg) {
-        alert('error refresh status ' + id + " " + msg);
+        $("#" + "court" + id + "button").removeClass("btn-info").removeClass("btn-success").addClass("btn-danger");
+        $("#" + "court" + id + "xbutton").addClass("hidden");
+        document.getElementById("court" + id + "status").innerHTML = "Statusanzeige kaputt!";
+        //alert('error refresh status ' + id + " " + msg);
       }
     });
   }
