--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -146,75 +146,23 @@
   <script src="libs/bootstrap/js/bootstrap.min.js"></script>
   <script src="app/jobs.js"></script>
 
-
   <script type="text/javascript">
 
-  elem = document.getElementById("court1button");
-  elem.addEventListener("click", wassern_id1, false);
-  elem = document.getElementById("court1xbutton");
-  elem.addEventListener("click", abbrechen_id1, false);
-
-  elem = document.getElementById("court2button");
-  elem.addEventListener("click", wassern_id2, false);
-  elem = document.getElementById("court2xbutton");
-  elem.addEventListener("click", abbrechen_id2, false);
-
-  elem = document.getElementById("court3button");
-  elem.addEventListener("click", wassern_id3, false);
-  elem = document.getElementById("court3xbutton");
-  elem.addEventListener("click", abbrechen_id3, false);
-
-  elem = document.getElementById("court4button");
-  elem.addEventListener("click", wassern_id4, false);
-  elem = document.getElementById("court4xbutton");
-  elem.addEventListener("click", abbrechen_id4, false);
-
-  elem = document.getElementById("court5button");
-  elem.addEventListener("click", wassern_id5, false);
-  elem = document.getElementById("court5xbutton");
-  elem.addEventListener("click", abbrechen_id5, false);
-
-  elem = document.getElementById("court6button");
-  elem.addEventListener("click", wassern_id6, false);
-  elem = document.getElementById("court6xbutton");
-  elem.addEventListener("click", abbrechen_id6, false);
-
-  function wassern_id1(event) {
-    wassern(1, event)
-  }
-  function wassern_id2(event) {
-    wassern(2, event)
-  }
-  function wassern_id3(event) {
-    wassern(3, event)
-  }
-  function wassern_id4(event) {
-    wassern(4, event)
-  }
-  function wassern_id5(event) {
-    wassern(5, event)
-  }
-  function wassern_id6(event) {
-    wassern(6, event)
-  }
-
-  function abbrechen_id1(event) {
-    abbrechen(1, event)
-  }
-  function abbrechen_id2(event) {
-    abbrechen(2, event)
-  }
-  function abbrechen_id3(event) {
-    abbrechen(3, event)
-  }
-  function abbrechen_id4(event) {
-    abbrechen(4, event)
-  }
-  function abbrechen_id5(event) {
-    abbrechen(5, event)
-  }
-  function abbrechen_id6(event) {
-    abbrechen(6, event)
+  for (var id = 1; id <= 6; id++) {
+    (function(id){
+      elem = document.getElementById("court" + id + "button");
+      elem.addEventListener(
+        "click",
+        function(event){wassern(id, event);},
+        false
+      );
+      elem = document.getElementById("court" + id + "xbutton");
+      elem.addEventListener(
+        "click",
+        function(event){abbrechen(id, event);},
+        false
+      );
+    })(id)
   }
 
   function wassern(id, event) {
@@ -337,7 +285,6 @@
   window.setInterval(refresh_all, 1000);
 
   function refresh_all() {
-
     for (var i = 1; i <= 6; i++) {
       refresh_status(i);
     }
