--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app id="ng-app">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>Platzberegnungsanlage</title>
@@ -12,7 +12,6 @@
   }
   </style>
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-responsive.css" />
-  <link rel="stylesheet" href="app/app.css" />
 </head>
 
 <body>
@@ -131,7 +130,6 @@
 
   <script src="libs/jquery/jquery-2.0.3.js"></script>
   <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-  <script src="app/jobs.js"></script>
 
   <script type="text/javascript">
 
